fixed arrows not showing up

--- a/css/slider.css
+++ b/css/slider.css
@@ -141,12 +141,12 @@
      -ms-transform: rotate(180deg);
          transform: rotate(180deg);
  margin-right:15px;
- left:5px;
+ left:-50px;
 }
 
 .fa-play:nth-of-type(2){
  margin-left:15px;
- right:5px;
+ right:-50px;
 }
 
 
@@ -212,6 +212,13 @@
   font-size:15px;
  }
 
+  .fa-play:nth-of-type(1){
+ left:5px;
+}
+
+.fa-play:nth-of-type(2){
+ right:5px;
+}
 
 }
 
